<resources>

    <string name="app_name">yeongkkuel</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Home -->
    <string name="expense_entry">지출 기입</string>
    <string name="expense_history">지출 내역</string>
    <string name="expense_history_edit">지출 내역 수정</string>

    <string name="category_manage">카테고리 관리</string>
    <string name="category_add">카테고리 추가</string>
    <string name="category_edit">카테고리 수정</string>

    <!-- Login -->
    <string name="splash_logo_description">splash_logo</string>
    <string name="login_kakao">카카오로 시작하기</string>
    <string name="login_gmail">G-Mail로 시작하기</string>
    <string name="login_title">함께라면 할 수 있다!</string>
    <string name="login_subtitle">재미있는 무지출 챌린지</string>

    <!-- SignUp -->
    <string name="signup_gender_title">2. 성별을 알려주세요.</string>
    <string name="signup_nickname_hint">닉네임을 입력해주세요</string>
    <string name="signup_nickname_title">1. 닉네임</string>
    <string name="signup_gender_female">여자</string>
    <string name="signup_gender_male">남자</string>
    <string name="signup_age_title">3. 연령대를 알려주세요.</string>
    <string name="signup_age_10s">14~19세</string>
    <string name="signup_age_20s">20대</string>
    <string name="signup_age_30s">30대</string>
    <string name="signup_age_40s">40대</string>
    <string name="signup_age_50s">50대</string>
    <string name="signup_age_over_60">60대 이상</string>
    <string name="signup_job_title">4. 현재 하시는 일을 알려주세요.</string>
    <string name="signup_job_student">학생</string>
    <string name="signup_job_worker">직장인</string>
    <string name="signup_job_housewife">주부</string>
    <string name="signup_job_business_owner">자영업자</string>

    <!-- Stat -->
    <string name="stat_daily">일간</string>
    <string name="stat_weekly">주간</string>
    <string name="stat_monthly">월간</string>

    <string name="chat_room_rank_info">지출 총액, 무지출 달성 카테고리 개수, 지출\n기입률의 가중치 합으로 지출 점수가 산출돼\n요. 지출 기입을 건너뛰면 챌린저 랭킹에 참\n여하지 못할 수 있어요. 지출이 없다면 무지\n출로 기입해주세요.랭킹은 매일 자정 업데이\n트 돼요. </string>

    <!-- 이용 약간-->

    <string name="terms_of_service">
        <![CDATA[
        [0끌] 이용약관\n\n

        제 1 조 (목적)\n
        본 약관은 [서비스 제공자](이하 “회사”)가 제공하는 [서비스명](이하 “서비스”)의 이용과 관련하여\n
        회사와 이용자의 권리, 의무, 책임, 기타 필요한 사항을 규정함을 목적으로 합니다.\n\n

        제 2 조 (정의)\n
        "서비스"란 회사가 제공하는 [앱] 및 관련 제반 서비스를 의미합니다.\n
        "이용자"란 본 약관에 따라 회사가 제공하는 서비스를 이용하는 모든 자를 의미합니다.\n
        "회원"이란 회사와 이용 계약을 체결하고 계정을 생성하여 서비스를 이용하는 자를 말합니다.\n
        "비회원"이란 회원가입 없이 서비스를 이용하는 자를 말합니다.\n
        "콘텐츠"란 서비스 내에서 제공되는 텍스트, 이미지, 동영상 등 모든 정보 또는 자료를 의미합니다.\n\n

        제 3 조 (약관의 게시와 개정)\n
        회사는 본 약관을 서비스 초기 화면 또는 연결 화면에 게시하여 이용자가 확인할 수 있도록 합니다.\n
        회사는 필요 시 관계법령을 위반하지 않는 범위에서 약관을 개정할 수 있습니다.\n\n
        약관이 개정되는 경우, 회사는 적용일자 및 개정사유를 명시하여 개정 약관 적용 7일 전부터 공지합니다.\n
        다만, 이용자에게 불리한 약관 변경의 경우 최소 30일 전에 공지합니다.\n\n
        이용자는 변경된 약관에 동의하지 않을 권리가 있으며, 변경 약관 적용일 전까지 이용 계약을 해지할 수 있습니다.\n\n

        제 4 조 (이용 계약 체결)\n
        서비스 이용 계약은 이용자가 약관에 동의하고, 회사가 제공하는 절차에 따라 이용 신청을 완료하며,\n
        회사가 이를 승인함으로써 체결됩니다.\n\n
        회사는 다음과 같은 사유가 있는 경우, 이용 신청을 승낙하지 않을 수 있습니다.\n
        - 허위 정보를 기재한 경우\n
        - 법령 또는 약관을 위반한 이력이 있는 경우\n
        - 기타 부적절하다고 판단되는 경우\n\n

        제 5 조 (서비스의 제공 및 변경)\n
        회사는 아래와 같은 서비스를 제공합니다.\n
        - [채팅 및 커뮤니티 서비스, 지출 관리 서비스]\n\n
        회사는 서비스의 기술적 필요 또는 운영상의 이유로 서비스를 변경할 수 있으며, 변경 사항은 사전에 공지합니다.\n
        회사는 무료로 제공되는 서비스에 대하여 관련 법령에 특별한 규정이 없는 한 책임을 지지 않습니다.\n\n

        제 6 조 (이용자의 의무)\n
        이용자는 다음 행위를 하여서는 안 됩니다.\n
        - 허위 정보 제공 및 타인의 정보를 도용하는 행위\n
        - 회사의 지적재산권 및 타인의 권리를 침해하는 행위\n
        - 서비스 운영을 방해하거나 회사의 서버 및 네트워크를 손상시키는 행위\n
        - 법령 및 공공질서에 반하는 행위\n\n

        제 7 조 (개인정보의 보호)\n
        회사는 이용자의 개인정보를 보호하기 위해 노력하며, 관련 법령 및 개인정보처리방침에 따라 이를 처리합니다.\n\n
        이용자는 개인정보 제공 시 항상 정확성을 유지해야 하며,\n
        잘못된 정보 제공으로 발생하는 불이익에 대해 회사는 책임을 지지 않습니다.\n\n

        제 8 조 (계약 해지 및 서비스 이용 제한)\n
        이용자가 서비스 이용을 원치 않을 경우, 언제든지 회원 탈퇴를 요청할 수 있으며, 회사는 즉시 처리를 완료합니다.\n\n
        회사는 이용자가 본 약관을 위반하거나 법령에 반하는 행위를 한 경우,\n
        사전 통보 없이 이용 계약을 해지하거나 서비스 이용을 제한할 수 있습니다.\n\n

        제 9 조 (책임의 제한)\n
        회사는 천재지변, 전쟁, 정부의 규제, 네트워크 장애 등 불가항력적인 사유로 인한 서비스 중단에 대해 책임을 지지 않습니다.\n\n
        회사는 이용자의 귀책사유로 발생한 손해에 대해 책임을 지지 않습니다.\n\n
        회사는 무료로 제공되는 서비스의 이용과 관련하여 어떠한 손해도 책임지지 않습니다.\n\n

        제 10 조 (지적재산권)\n
        서비스 내 제공되는 모든 콘텐츠 및 자료에 대한 지적재산권은 회사에 귀속됩니다.\n\n
        이용자는 회사의 사전 동의 없이 서비스 내 콘텐츠를 복제, 배포, 수정, 출판 등의 행위를 할 수 없습니다.\n\n

        제 11 조 (분쟁 해결)\n
        회사와 이용자 간에 발생한 분쟁에 대해 원만한 해결을 위해 상호 협의합니다.\n\n
        협의가 이루어지지 않는 경우, 관련 법령에 따라 관할 법원에 소송을 제기할 수 있습니다.\n\n

        부칙\n
        본 약관은 [2025.02.02.]부터 적용됩니다.\n\n
        본 약관 시행 전 이용 계약에 대해서도 본 약관이 적용됩니다.\n
        ]]>
    </string>

    <string name="privacy_policy">
        <![CDATA[
        [0끌] 개인정보 수집 및 이용 동의\n\n

        1. 수집하는 개인정보 항목\n
        회사는 다음과 같은 개인정보를 수집합니다.\n\n
        (1) 필수 수집 항목\n
        회원 가입 시: 이름, (소셜 미디어) 이메일 주소,\n
        닉네임\n
        서비스 이용 시: IP 주소, 쿠키, 방문 기록, 서비스 이용 기록\n\n
        (2) 선택 수집 항목\n
        성별, 나이, 직업\n\n

        2. 개인정보 수집 및 이용 목적\n
        회사는 다음과 같은 목적을 위해 개인정보를 수집 및 이용합니다.\n\n
        - 서비스 제공\n
        회원 가입, 본인 인증, 서비스 이용 관련 안내 및 고객 문의 대응\n
        콘텐츠 제공 및 맞춤형 서비스 제공\n\n
        - 서비스 개선 및 분석\n
        서비스 이용 통계 분석 및 신규 서비스 개발\n\n
        - 법적 의무 준수\n
        관계 법령에 따른 기록 보관 및 법적 의무 이행\n\n

        3. 개인정보의 보유 및 이용 기간\n
        회사는 개인정보를 수집 및 이용 목적이 달성된 후에는 해당 정보를 지체 없이 파기합니다.\n
        단, 관계 법령에 따라 보관이 필요한 경우, 아래와 같이 보관합니다.\n\n
        - 전자상거래 등에서의 소비자 보호에 관한 법률\n
          계약 또는 청약 철회 기록: 5년\n
          소비자 불만 및 분쟁 처리 기록: 3년\n\n
        - 통신비밀보호법\n
          로그인 기록: 3개월\n\n

        4. 개인정보 제공 및 공유\n
        회사는 이용자의 동의 없이 개인정보를 제3자에게 제공하지 않습니다. 단, 아래의 경우는 예외로 합니다.\n\n
        - 법령에 따라 요청받은 경우\n
        - 이용자가 사전에 동의한 경우\n\n

        5. 이용자의 권리\n
        이용자는 언제든지 본인의 개인정보에 대해 다음의 권리를 행사할 수 있습니다.\n\n
        - 개인정보 열람 요청\n
        - 개인정보 정정 요청\n
        - 개인정보 삭제 요청\n
        - 개인정보 처리 정지 요청\n\n
        회사는 이용자의 요청을 받은 경우, 관련 법령에 따라 조치를 취하며, 처리 결과를 안내합니다.\n\n

        6. 개인정보의 파기 절차 및 방법\n
        회사는 개인정보 보유 기간이 경과하거나 수집 및 이용 목적이 달성된 경우, 해당 정보를 지체 없이 파기합니다.\n\n
        - 파기 절차: 보유 기간이 경과하거나 이용 목적이 달성된 개인정보를 분리 보관한 후 파기합니다.\n
        - 파기 방법:\n
          전자적 파일: 복구 불가능한 방법으로 영구 삭제\n
          서면 자료: 분쇄하거나 소각\n\n

        7. 개인정보의 안전성 확보 조치\n
        회사는 개인정보 보호를 위해 다음과 같은 조치를 취합니다.\n\n
        - 개인정보 암호화: 중요 정보는 암호화된 상태로 저장 및 전송\n
        - 접근 제한: 개인정보 처리 시스템에 대한 접근 권한 관리\n
        - 보안 시스템: 방화벽, 백신 소프트웨어 등 기술적 조치\n
        - 정기 점검: 개인정보 처리 시스템 및 보안 장비의 정기적 점검\n\n

        8. 개인정보 관리 책임자 및 문의처\n
        이용자는 개인정보 관련 문의, 불만 처리, 피해 구제 등을 위해 아래의 개인정보 관리 책임자에게 문의할 수 있습니다.\n\n
        - 책임자: [전윤하]\n
        - 이메일: [0ggeul@gmail.com]\n\n

        9. 동의 거부 시 불이익 안내\n
        이용자는 개인정보 수집 및 이용에 대한 동의를 거부할 권리가 있습니다. 다만, 동의를 거부할 경우 서비스 이용이 제한될 수 있습니다.\n\n

        부칙\n
        본 약관은 [2025.02.02]부터 적용됩니다.\n
        ]]>
    </string>

    <string name="age_verification_policy">
        <![CDATA[
        [0끌] 만 14세 이상 확인 약관\n\n

        제 1 조 (목적)\n
        본 약관은 서비스명의 이용과 관련하여 만 14세 이상 사용자의 서비스 이용 자격 및 책임을 규정함을 목적으로 합니다.\n\n

        제 2 조 (만 14세 이상 이용 확인)\n
        본 서비스는 만 14세 이상만 가입 및 이용이 가능합니다.\n
        이용자는 서비스 가입 및 이용 신청 시, 본인이 만 14세 이상임을 확인하고 이에 동의해야 합니다.\n\n

        제 3 조 (만 14세 미만 사용자의 제한)\n
        회사는 이용자가 만 14세 미만으로 판명된 경우, 서비스 이용 계약을 해지하거나 즉시 서비스를 중단할 수 있습니다.\n
        만 14세 미만 사용자가 개인정보를 제공한 사실이 확인될 경우, 회사는 이를 즉시 파기합니다.\n\n

        제 4 조 (책임 및 의무)\n
        이용자는 본인이 만 14세 이상임을 보증하며, 허위 정보를 제공하여 발생하는 모든 문제에 대한 책임은 이용자 본인에게 있습니다.\n
        회사는 만 14세 미만 사용자가 부정확한 정보를 제공하여 발생한 문제에 대해 책임을 지지 않습니다.\n\n

        제 5 조 (동의 철회 및 문의)\n
        이용자는 본인의 나이 확인 및 개인정보 제공 동의를 철회할 수 있으며, 이 경우 서비스 이용이 제한될 수 있습니다.\n
        관련 문의는 아래 연락처를 통해 회사에 요청할 수 있습니다.\n\n
        - 책임자: [전윤하]\n
        - 이메일: [0ggeul@gmail.com]\n\n

        부칙\n
        본 약관은 [2025.02.02.]부터 적용됩니다.\n
        ]]>
    </string>

    <string name="third_party_privacy_policy">
        <![CDATA[
        [0끌] 개인정보 제3자 제공 동의서\n\n

        서비스명는 이용자의 개인정보를 소중히 여기며,\n
        관련 법령에 따라 제3자 제공 시 사전 동의를 받고 있습니다.\n
        아래의 내용을 충분히 숙지하신 후 동의 여부를 결정해 주시기 바랍니다.\n\n

        1. 개인정보를 제공받는 자\n
        회사는 아래의 제3자에게 이용자의 개인정보를 제공합니다.\n\n
        - **제공받는 자 | 제공 목적 | 제공 항목 | 보유 및 이용 기간**\n
        - **아모코그니티브(Amobee)** | 데이터 기반 마케팅 및 분석 | 앱 내 유저 나이, 성별, 직업별 지출 정보 | 서비스 제공 완료 시까지 정보 보관\n
        - **Meta (Facebook/Instagram)** | 광고 타겟팅 및 성과 분석 | 앱 내 유저 나이, 성별, 직업별 지출 정보 | 서비스 제공 완료 시까지 정보 보관\n\n

        2. 제공 목적\n
        회사는 이용자의 개인정보를 아래와 같은 목적을 위해 제3자에게 제공합니다.\n\n
        - 서비스 제공에 필요한 업무 수행\n
        - 서비스 품질 개선 및 맞춤형 서비스 및 광고 제공\n\n

        3. 제공하는 개인정보 항목\n
        제공하는 개인정보 항목은 다음과 같습니다.\n\n
        - **필수 정보**: 이름, 이메일\n
        - **선택 정보**: 나이대, 성별, 직업\n\n

        4. 개인정보의 보유 및 이용 기간\n
        제공받는 자는 개인정보를 제공받은 목적이 달성된 후에는 즉시 해당 정보를 파기합니다.\n
        다만, 관계 법령에 따라 보관이 필요한 경우, 해당 법령에 따라 일정 기간 보관할 수 있습니다.\n\n

        5. 동의를 거부할 권리 및 동의 거부 시 불이익\n
        이용자는 개인정보의 제3자 제공에 대해 동의를 거부할 권리가 있습니다.\n\n

        6. 문의 및 철회\n
        이용자는 언제든지 개인정보 제공 동의를 철회하거나 관련 문의를 할 수 있습니다.\n\n
        - 책임자: [전윤하]\n
        - 이메일: [0ggeul@gmail.com]\n\n

        부칙\n
        본 약관은 [2025.02.02.]부터 적용됩니다.\n
        ]]>
    </string>

    <string name="service_term"><u>서비스 이용 약관 (필수)</u></string>
    <string name="privacy_term"><u>개인정보 수집 및 이용 동의 (필수)</u></string>
    <string name="age_term"><u>만 14세 이상 확인 (필수)</u></string>
    <string name="third_party_term"><u>개인정보 제3자 제공 동의 (선택)</u></string>

</resources>