<?xml version="1.0" encoding="utf-8"?><!-- ConstraintLayout으로 전체 감싼다 -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- 뒤로가기 아이콘 -->
    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="뒤로가기"
        android:focusable="true"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- 타이틀 텍스트 -->
    <TextView
        android:id="@+id/tvTitle"
        style="@style/title_semib"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="0끌 시작하기 5초 전!\n서비스 약관 동의가 필요해요"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivBack" />


        <!-- 내부 LinearLayout: 수직으로 항목 배치 -->
        <LinearLayout
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- 전체 동의 (큰 체크박스) -->
            <LinearLayout
                android:id="@+id/checkAllArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center_vertical"
                android:paddingEnd="4dp">

                <!-- 라벨 텍스트 -->
                <TextView
                    android:id="@+id/tvCheckAll"
                    style="@style/humm_medium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="전체 동의"
                    android:textColor="@color/black3" />

                <!-- 체크 아이콘 (Big) -->
                <ImageView
                    android:id="@+id/ivCheckAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/selector_big_checkbox" />
            </LinearLayout>

            <!-- 구분선 -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@color/main4" />

            <!-- 서비스 이용 약관 (필수) -->
            <LinearLayout
                android:id="@+id/checkServiceArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:paddingEnd="4dp">

                <TextView
                    android:id="@+id/tvCheckService"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/service_term"
                    android:lineSpacingExtra="2dp"
                    android:clickable="true"

                    android:textColor="@color/black3"/>

                <ImageView
                    android:id="@+id/ivCheckService"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/selector_small_checkbox" />
            </LinearLayout>

            <!-- 개인정보 수집 및 이용 동의 (필수) -->
            <LinearLayout
                android:id="@+id/checkPrivacyArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:paddingEnd="4dp">

                <TextView
                    android:id="@+id/tvCheckPrivacy"
                    style="@style/body_regula"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/privacy_term"
                    android:clickable="true"

                    android:textColor="@color/black3" />

                <ImageView
                    android:id="@+id/ivCheckPrivacy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/selector_small_checkbox" />
            </LinearLayout>

            <!-- 만 14세 이상 확인 (필수) -->
            <LinearLayout
                android:id="@+id/checkAgeArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:paddingEnd="4dp">

                <TextView
                    android:id="@+id/tvCheckAge"
                    style="@style/body_regula"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/age_term"
                    android:clickable="true"
                    android:textColor="@color/black3" />

                <ImageView
                    android:id="@+id/ivCheckAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/selector_small_checkbox" />
            </LinearLayout>

            <!-- 개인정보 제3자 제공 동의 (선택) -->
            <LinearLayout
                android:id="@+id/checkThirdPartyArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:paddingEnd="4dp">

                <TextView
                    android:id="@+id/tvCheckThirdParty"
                    style="@style/body_regula"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/third_party_term"
                    android:clickable="true"
                    android:textColor="@color/black3" />

                <ImageView
                    android:id="@+id/ivCheckThirdParty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/selector_small_checkbox" />
            </LinearLayout>

        </LinearLayout>


    <!-- 회원가입 '버튼'(TextView) - 화면 하단 고정 -->
    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="14dp"
        android:background="@drawable/selector_signup_button"
        android:clickable="true"
        android:enabled="false"
        android:focusable="true"
        android:gravity="center"
        android:paddingVertical="16dp"
        android:text="회원가입"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
